# CoreDeck

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.rtf  README.md  resources.rc  resources.rc.in
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml
assets/icons/: icon.icns
src/: application.cpp  application.h  avd.cpp  avd.h  avd_info.cpp  components.cpp  components.h  emulator.cpp  emulator.h  log_buffer.cpp  log_buffer.h  main.cpp  options.cpp  options.h  paths.cpp  paths.h  pch.h  process.cpp  process.h  sdk.cpp  sdk.h  utilities.cpp  utilities.h
src/core/: app_settings.cpp  app_settings.h  app_settings_types.h  avd.cpp  avd.h  crash_reporter.cpp  crash_reporter.h  emulator.cpp  emulator.h  emulator_console.cpp  emulator_console.h  file_dialog.cpp  file_dialog.h  log.h  log_buffer.cpp  onboarding.cpp  onboarding.h  options.cpp  paths.cpp  paths.h  process.cpp  process.h  sdk.cpp  sdk.h  system_image.cpp  system_image.h  utilities.cpp  utilities.h  version_check.cpp  version_check.h
src/gui/: application.cpp  application.h  context.h  icons.h  theme.cpp  theme.h  widgets.cpp  widgets.h
src/gui/windows/: about.cpp  about.h  avd_info.cpp  avd_info.h  avd_list.cpp  avd_list.h  avd_logs.cpp  avd_logs.h  avd_options.cpp  avd_options.h  create_avd.cpp  create_avd.h  delete_avd.cpp  delete_avd.h  install_image.cpp  install_image.h  main_menu_bar.cpp  main_menu_bar.h  onboarding.cpp  onboarding.h  preferences.cpp  preferences.h  sdk_banner.cpp  sdk_banner.h  storage.cpp  storage.h  update.cpp  update.h
tests/: CMakeLists.txt  test_log_buffer.cpp  test_paths.cpp  test_utilities.cpp  test_version_check.cpp
tools/: audit_pch.sh
